--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>UA Test</title>
   </head>
   <style>
     body {
       padding: 40px;
     }
+
+    #iii {
+      border: 1px solid #ccc;
+      padding: 10px;
+    }
   </style>
   <body>
     <p id="iii"></p>
+    <br />
     输入 UA 测试（不区分大小写）：<input
       id="input"
       type="text"
