--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     }
   </style>
   <body>
+    <p id="date"></p>
     <p id="iii"></p>
     <br />
     输入 UA 测试（不区分大小写）：<input
@@ -31,6 +32,8 @@
     <a id="aaa" href="https://baidu.com">测试 a 链接阻止跳转</a>
   </body>
   <script>
+    
+    document.querySelector("#date").innerText = new Date();
     document.querySelector("#iii").innerText = navigator.userAgent;
 
     function getRes(v) {
