--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </body>
   <script>
     
-    document.querySelector("#date").innerText = new Date();
+    document.querySelector("#date").innerText = "Local date: " + new Date();
     document.querySelector("#iii").innerText = navigator.userAgent;
 
     function getRes(v) {
